[project]
name = "ballercount"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "firebase-admin>=6.9.0",
    "matplotlib>=3.10.3",
    "nba-api>=1.9.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
]
